--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 <body>
   <noscript>
     <strong>We're sorry but mortage doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
+      continue.
+    </strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
